# wizlightcpp

./: CMakeLists.txt
src/: wizcontrol.cpp
